--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: treemendous
-Title: What the Package Does (One Line, Title Case)
+Title: Homogenize Tree Species Taxonomical Names According to Existing Databases
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+    person("Felix", "Specker", , "speckerf@student.ethz.ch", role = c("aut", "cre"),
+           )
+Description: Users can provide a list of tree species names which is then matched to a global
+  tree species databases. The database is a 
+License: `use_mit_license()`
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
