add suffix matching before fuzzy matching

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,4 +7,5 @@ export(fuzzy_match_species_within_genus)
 export(genus_match)
 export(matching)
 export(species_within_genus_match)
+export(suffix_match_species_within_genus)
 importFrom(magrittr,"%>%")
