--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(fuzzy_match_genus)
 export(fuzzy_match_species_within_genus)
 export(genus_match)
 export(matching)
+export(resolve_synonyms)
 export(species_within_genus_match)
 export(suffix_match_species_within_genus)
 importFrom(magrittr,"%>%")
