--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,6 +22,7 @@ Imports:
 Depends: 
     R (>= 2.10)
 LazyData: true
+LazyDataCompression: xz
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
