--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(direct_match)
 export(fuzzy_match_genus)
 export(fuzzy_match_species_within_genus)
 export(genus_match)
+export(iterate_synonym_resolving)
 export(matching)
 export(resolve_synonyms)
 export(species_within_genus_match)
