--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(genus_match)
 export(iterate_synonym_resolving)
 export(matching)
 export(resolve_synonyms)
+export(sequential_matching)
 export(species_within_genus_match)
 export(suffix_match_species_within_genus)
 importFrom(magrittr,"%>%")
