--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,9 +6,9 @@ export(direct_match_species_within_genus)
 export(fuzzy_match_genus)
 export(fuzzy_match_species_within_genus)
 export(genus_match)
-export(iterate_synonym_resolving)
 export(matching)
 export(resolve_synonyms)
 export(sequential_matching)
 export(suffix_match_species_within_genus)
+export(summarize_output)
 importFrom(magrittr,"%>%")
