--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export("%>%")
 export(direct_match)
 export(direct_match_species_within_genus)
+export(enforce_matching)
 export(fuzzy_match_genus)
 export(fuzzy_match_species_within_genus)
 export(genus_match)
