update roles in description

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,18 @@ Package: treemendous
 Title: Standardizing taxonomical names of tree species
 Version: 0.0.0.9000
 Authors@R: 
-    person("Felix", "Specker", , "speckerf@student.ethz.ch", role = c("aut", "cre"))
-Description: Treemendous is an R package for standardizing taxonomical names of tree species.  The package comes along with the comprehensive dataset of trees species Treemendous.Trees, compiled from six different publicly available backbones. The package consists of two main functionalities:  First, the user can match tree species names against the Treemendous.Trees database. Second, matched species names can be resolved to their corresponding accepted species names.  The user can always specify which backbone of the Treemendous.Trees dataset should be considered during the pipelines. 
+    person("Felix", "Specker", email = "speckerf@student.ethz.ch", role = c("aut", "cre"))
+    person("Andrea", "Paz Velez", email = "andrea.pazvelez@usys.ethz.ch", role = c("aut"))
+    person("Daniel", "Maynard", email = "daniel.maynard@usys.ethz.ch", role = c("aut"))
+    person("Thomas W.", "Crowther", email = "tom.crowther@usys.ethz.ch", role = c("fnd"))
+Description: Treemendous is an R package for standardizing taxonomical names of 
+tree species. The package comes along with the comprehensive dataset of trees 
+species Treemendous.Trees, compiled from six different publicly available backbones. 
+The package consists of two main functionalities:  First, the user can match tree 
+species names against the Treemendous.Trees database. Second, matched species names 
+can be resolved to their corresponding accepted species names.  The user can always 
+specify which backbone of the Treemendous.Trees dataset should be considered during 
+the pipelines. 
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
