delete FIA and PIA from documentation and code and add documentation for translate_trees

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,4 +12,5 @@ export(resolve_synonyms)
 export(sequential_matching)
 export(suffix_match_species_within_genus)
 export(summarize_output)
+export(translate_trees)
 importFrom(magrittr,"%>%")
