--- a/.github/workflows/test-coverage.yml
+++ b/.github/workflows/test-coverage.yml
@@ -11,6 +11,7 @@ name: test-coverage
 jobs:
   test-coverage:
     runs-on: ubuntu-latest
+      r-version: ['4.1.1']
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
 
