--- a/.github/workflows/test-coverage.yml
+++ b/.github/workflows/test-coverage.yml
@@ -11,7 +11,9 @@ name: test-coverage
 jobs:
   test-coverage:
     runs-on: ubuntu-latest
-      r-version: ['4.1.1']
+    strategy:
+      matrix:
+        r-version: ['4.1.1']
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
 
