--- a/.github/workflows/R-CMD-check.yml
+++ b/.github/workflows/R-CMD-check.yml
@@ -22,7 +22,7 @@ jobs:
     runs-on: macos-latest
     strategy:
       matrix:
-        r-version: ['4.1.1']
+        r-version: ['4.1.1', '3.6.0']
 
     steps:
       - uses: actions/checkout@v3
