--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(enforce_matching)
 export(fuzzy_match_genus)
 export(fuzzy_match_species_within_genus)
 export(genus_match)
+export(highlight_flags)
 export(matching)
 export(resolve_synonyms)
 export(sequential_matching)
